# ecg_cnn_pytorch

./: .coverage  .coveragerc  .gitignore  README.md  coverage.xml  download_data.sh  ecg_app.py  ecg_cnn_pytorch_demo.ipynb  ecg_cnn_pytorch_demo.py  environment.yml  fetch_ptbxl.py  ptbxl_loader_example.py  pyproject.toml  pytest.ini  requirements_colab.txt  results_summary_pytorch.csv  setup.py  train_ecg_cnn_ptbxl.ipynb  train_ecg_cnn_ptbxl.py
.github/: ci.yml
.github/workflows/: ci.yml
configs/: baseline.yaml  compact_grid.yaml  compact_plus_grid.yaml  frac_02.yaml  grid.yaml  grid_12.yaml  grid_18.yaml  grid_27.yaml  premium_grid.yaml  sample.yaml  suggested_grid.yaml
data/sample/: 00001_lr_100hz.csv  00002_lr_100hz.csv  00003_lr_100hz.csv  00004_lr_100hz.csv  00005_lr_100hz.csv  00006_lr_100hz.csv  00007_lr_100hz.csv  00008_lr_100hz.csv  00009_lr_100hz.csv  00010_lr_100hz.csv  00011_lr_100hz.csv  00012_lr_100hz.csv  00013_lr_100hz.csv  00014_lr_100hz.csv  00015_lr_100hz.csv  00016_lr_100hz.csv  00017_lr_100hz.csv  00018_lr_100hz.csv  00019_lr_100hz.csv  00020_lr_100hz.csv  00021_lr_100hz.csv  00022_lr_100hz.csv  00023_lr_100hz.csv  (+77 more)
demos/: run_streamlit_ecg_app.py  run_streamlit_ecg_demo.py
ecg_cnn/: __init__.py  config.py  evaluate.py  evaluate_2.py  paths.py  train.py
explorer/: convert_to_streamlit_format.py  run_streamlit_ecg_app.py
notebooks/: ecg_cnn_colab.ipynb
outputs/: training_summary.txt
scripts/: build_ptbxl_sample.py  ensemble_test.py  evaluate_cli.py  make_larger_sample.py  make_representative_samples.py  make_sample_model.py  scp_codes.py
src/: data_utils.py  grid_search.py  model_utils.py  train_ecg_cnn_ptbxl.py
tests/: conftest.py  test_cli_args.py  test_config_loader.py  test_data_utils.py  test_dataset.py  test_dataset_cache.py  test_evaluate.py  test_fetch_ptbxl.py  test_grid_utils.py  test_loaders.py  test_model_utils.py  test_plot_utils.py  test_train.py  test_trainer.py  test_training_utils.py  test_validate.py
(+504 files in other folders)
