[project]
name = "ecg_cnn"
version = "0.1.0"
description = "Convolutional Neural Network for ECG classification using PTB-XL"
authors = [
    { name = "Patrick Beach", email = "patrick.beach@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "pandas",
    "torch",
    "scikit-learn",
    "wfdb",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "ipykernel"
]

[tool.setuptools]
packages = ["ecg_cnn"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
