[project]
name = "ecg_cnn"
version = "0.1.0"
description = "CNN for ECG classification using PTB-XL"
authors = [{ name = "Patrick Beach", email = "patrick.beach@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "wfdb",
    "matplotlib",
    "torch"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "ipykernel"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ecg_cnn"]