[project]
name = "ecg_cnn"
version = "1.0.0"
description = "CNN for ECG classification using PTB-XL"
authors = [{ name = "Patrick Beach", email = "patrick.beach@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "torch",
    "torchvision",
    "torchaudio",
    "wfdb",
    "seaborn",
    "tqdm",
    "jupytext",
    "shap>=0.45"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "ipykernel"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ecg_cnn"]
